2007-04-28  Matthias Wimmer  <m@tthias.eu>

    * jabberd/jabberd.h: new std::ostream based logging interface
    * jabberd/log.cc: same
    * jabberd/instance_base.cc: same
    * proxy65/proxy65.cc: using new logging interface
    * jabberd/lib/jabberdlib.h: adding missing include for xmppd::pointer

2007-04-27  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/xmlnode.cc: improved memory management of xmlnode_get_tags()
    * jabberd/lib/xhash.cc: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/jutil.cc: same
    * jabberd/acl.cc: same
    * jabberd/config.cc: same
    * jabberd/mio.cc: same
    * jabberd/base/base_dir.cc: same
    * jabberd/base/base_connect.cc: same
    * jabberd/base/base_accept.cc: same
    * jabberd/jabberd.cc: same
    * jabberd/deliver.cc: same
    * jsm/util.cc: same
    * jsm/serialization.cc: same
    * jsm/authreg.cc: same
    * jsm/modules/mod_xml.cc: same
    * jsm/modules/mod_auth_digest.cc: same
    * jsm/modules/mod_disco.cc: same
    * jsm/modules/mod_presence.cc: same
    * jsm/modules/mod_privacy.cc: same
    * jsm/modules/mod_roster.cc: same
    * jsm/modules/mod_auth_crypt.cc: same
    * jsm/modules/mod_auth_plain.cc: same
    * jsm/modules/mod_register.cc: same
    * dialback/dialback.cc: same
    * xdb_sql/xdb_sql.cc: same
    * proxy65/proxy65.cc: same
    * pthsock/client.cc: same
    * xdb_file/xdbfiletool.cc: same
    * xdb_file/xdb_file.cc: same

2007-04-26  Matthias Wimmer  <m@tthias.eu>

    * proxy65/proxy65.cc: destruction and logging
    * proxy65/proxy65.h: same
    * jabberd/lib/xhash.cc: being prepared that an xhash_walker might delete
	an element
    * jabberd/lib/jid.cc: fixing a problem caused by casting away const

2007-04-25  Matthias Wimmer  <m@tthias.eu>

    * proxy65/proxy65.h: continued work on proxy65
    * proxy65/proxy65.cc: same

2007-04-15  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/pointer.tcc: import from jadc2s of a pointer template class
