@@ -1,3 +1,8 @@
+2007-05-01  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/lib/xhash.cc: making the value type of xmppd::xhash generic
+    * jabberd/lib/jabberdlib.h: same
+
 2007-04-28  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/jabberd.h: new std::ostream based logging interface
